--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WanderLust</title>
-  </head>
+<%layout("/layouts/boilerplate")%>
   <body>
     <h3>Create a new Listing</h3>
     <form method="post" action="/listings">
@@ -25,4 +19,3 @@
       </button>
     </form>
   </body>
-</html>
