--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,20 @@
+body{
+    font-family: "Plus Jakarta Sans", sans-serif !important;
+    display: flex;
+    flex-direction:column;
+    min-height: 100vh;
+}
+.container{
+    flex:1;
+}
 .navbar{
     height: 5rem;
     background-color: white;
+}
+.row{
+    display: flex !important;
+    justify-content: center !important;
+    flex-wrap: wrap !important;
 }
 .fa-compass{
     color:#fe424d;
@@ -14,7 +28,7 @@
     text-decoration: none;
     color:#222222;
 }
-.f-info-links a:hover{
+.f-info-links  a:hover{
     text-decoration: underline;
 }
 .f-info-links, .f-info-socials,.f-info-brand{
@@ -35,4 +49,55 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: space-evenly;
+}
+
+
+/* cards */
+.card{
+    border: none !important;
+    margin-bottom: 2rem;
+}
+
+.card-img-top{
+    border-radius: 1rem !important;
+    width: 100% !important;
+    object-fit:cover !important;
+}
+.card-body{
+    padding: 0px !important;
+}
+.card-text p{
+    font-weight: 400 !important;
+}
+.listing-link{
+    text-decoration: none;
+}
+/* /Card Effect/ */
+.card-img-overlay{
+    opacity:0;
+}
+.card-img-overlay:hover{
+    opacity:0.2;
+    background-color:white
+}
+.addbtn{
+    background-color: #fe424d !important;
+    border:none !important;
+}
+/* Edit Page */
+.editbtn{
+    background-color: #fe424d !important;
+    border:none !important;
+}
+
+/* Show page */
+.show-img{
+    height: 30vh;
+}
+.btns{
+    display: flex;
+}
+.show-card{
+    padding-left: 0;
+    padding-right: 0;
 }
