--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,12 +1,28 @@
 <%layout("/layouts/boilerplate")%>
-<body>
-    <h3>ALL LISTINGS</h3>
-    <!-- <form method="get" action="/listings/new">
+
+<h3>ALL LISTINGS</h3>
+<!-- <form method="get" action="/listings/new">
         <button>Create New Listing</button>
     </form> -->
-    <ul>
+<div class="row row-cols-lg-3-md-2 row-cols-sm-1">
     <% for(let listing of alllistings){%>
-        <li><a href="/listings/<%=listing._id %>"><%=listing.title%></a></li>
-    <%}%>
-    </ul>
-</body>
+        <a href="/listings/<%= listing.id %>" class="card col listing-link" style="width: 23rem; text-decoration: none; color: inherit;">
+    <div class="card col" style="width: 23rem">
+      <img
+        src="<%= listing.image.url %>"
+        class="card-img-top"
+        alt="listing_image"
+        style="height: 20rem"
+      />
+      <div class="card-img-overlay">
+      </div>
+      <div class="card-body">
+        <p class="card-text">
+          <b><%=listing.title%></b><br />
+          &#8377; <%= listing.price.toLocaleString("en-IN") %>/night
+        </p>
+      </div>
+    </div>
+    </a>
+  <%}%>
+</div>
