--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,21 +1,69 @@
 <%layout("/layouts/boilerplate")%>
-  <body>
+<div class="row mt-3">
+  <div class="col-8 offset-2">
+    <br><br>
     <h3>Create a new Listing</h3>
     <form method="post" action="/listings">
-      <input name="listing[title]" placeholder="Enter Title" type="text" />
-      <br /><br />
-      <textarea name="listing[description]" placeholder="Enter description"> </textarea>
-      <br /><br />
-      <input name="listing[image]" type="text" placeholder="Enter image URL/Link" />
-      <br /><br />
-      <input name="listing[price]" placeholder="Enter Price" type="number" />
-      <br /><br />
-      <input name="listing[country]" placeholder="Enter Country" type="text" />
-      <br /><br />
-      <input name="listing[location]" type="text" placeholder="Enter location" />
-      <br />
-      <button>
-        Add 
-      </button>
+      <div class="mb-3">
+        <label for="title" class="form-label">Title</label>
+        <input
+          name="listing[title]"
+          placeholder="Add a catchy title"
+          type="text"
+          class="form-control"
+        />
+      </div>
+      <div class="mb-3">
+        <label for="description" class="form-label">Description</label>
+        <textarea name="listing[description]" class="form-control"> </textarea>
+      </div>
+      <div class="mb-3">
+        <label for="image" class="form-label" 
+          >Image Link</label
+        >
+        <input
+          name="listing[image]"
+          type="text"
+          placeholder="Enter image URL/Link"
+          class="form-control"
+        />
+      </div>
+      <div class="row">
+        <div class="mb-3 col-md-4">
+          <label for="price"  class="form-label">Price</label>
+          <input
+            name="listing[price]"
+            placeholder="1200"
+            type="number"
+            class="form-control"
+          />
+        </div>
+        <div class="mb-3 col-md-8">
+          <label for="country" 
+          class="form-label"
+            >Country</label
+          >
+          <input
+            name="listing[country]"
+            placeholder="India"
+            type="text"
+            class="form-control"
+          />
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="location" class="form-label" class="form-label"
+          >Location</label
+        >
+        <input
+          name="listing[location]"
+          type="text"
+          placeholder="Jaipur,Rajastan etc..."
+          class="form-control"
+        />
+      </div>
+      <button class="btn btn-dark addbtn mt-3">Add</button>
+      <br><br>
     </form>
-  </body>
+  </div>
+</div>
