--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,17 +1,30 @@
 <%layout("/layouts/boilerplate")%>
-<body>
-    <h3>Listing Details:</h3>
-    <ul>
-        <li><%= listing.title %></li>
-        <li> <%= listing.description %></li>
-        <li>&#8377; <%= listing.price.toLocaleString("en-IN") %></li>
-        <li><%= listing.location %></li>
-        <li><%= listing.country %></li>
-    </ul>
-    <br>
-    <a href="/listings/<%= listing._id%>/edit">Edit This Listing</a>
-    <br><br>
+<div class="row mt-3">
+  <div class="col-8 offset-2">
+    <h3>Listing Details</h3>
+  </div>
+
+  <div class="card col-6 offset-2show-card">
+    <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="..." />
+    <div class="card-body">
+      <p class="card-text">
+        <b> <%= listing.title %></b><br />
+        <%= listing.description %> <br />
+        &#8377; <%= listing.price.toLocaleString("en-IN") %> <br />
+        <%= listing.location %> <br />
+        <%= listing.country %> <br />
+      </p>
+    </div>
+  </div>
+  <div class="btns" style="margin-left: 13rem;">
+    <a
+      href="/listings/<%= listing._id%>/edit"
+      class="btn btn-dark col-1 offset-2 editbtn"
+      >Edit</a
+    >
     <form method="post" action="/listings/<%=listing._id%>/?_method=DELETE">
-        <button>Delete</button>
+      <button class="btn btn-dark offset-4">Delete</button>
     </form>
-</body>
+  </div>
+</div>
+<br>
