--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,14 +1,13 @@
 <%layout("/layouts/boilerplate")%>
 <div class="row mt-3">
   <div class="col-8 offset-2">
-    <h3>Listing Details</h3>
+    <h3><%= listing.title %></h3>
   </div>
 
-  <div class="card col-6 offset-2show-card">
+  <div class="card col-6 offset-0 show-card listing-card">
     <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="..." />
     <div class="card-body">
       <p class="card-text">
-        <b> <%= listing.title %></b><br />
         <%= listing.description %> <br />
         &#8377; <%= listing.price.toLocaleString("en-IN") %> <br />
         <%= listing.location %> <br />
@@ -26,5 +25,41 @@
       <button class="btn btn-dark offset-4">Delete</button>
     </form>
   </div>
+
+  <div class="card col-6 offset-0 mb-3">
+    <hr>
+    <h4>Please Do Leave a Review</h4>
+    <form action="/listings/<%=listing.id %>/reviews" method="post" novalidate class="needs-validation">
+      <div class="mb-3 mt-3">
+        <label for="rating" class="form-label">Rating</label>
+        <input type="range" min="1" max ="5" id="rating" name="review[rating]" class="form-range">
+      </div>
+      <div class="mb-3 mt-3">
+        <label for="comment" class="form-label">Comments</label>
+        <textarea name="review[comment]" id="comment" cols="30" rows="5"  class="form-control" required></textarea>
+        <div class="invalid-feedback">Please add some comments for review</div>
+        </div>
+        <button class="btn btn-outline-dark">Submit</button>
+    </form>
+
+    <hr>
+
+    <p><b>All Reviews</b></p>
+    <div class="row">
+    <% for(review of listing.reviews) {%>
+      <div class="card-rev-del col-5 ms-3 mb-3">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text"><%=review.comment%></p>
+          <p class="card-text"><%=review.rating %> Stars</p>
+        </div>
+        <form action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE" method ="post" class="mb-3 mt-1">
+          <button class="btn btn-sm btn-dark">Delete</button>
+        </form>
+      </div>
+<%}%>
 </div>
-<br>
+
+  </div>
+</div>
+
