--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -8,13 +8,18 @@
     <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="..." />
     <div class="card-body">
       <p class="card-text">
-        <%= listing.description %> <br />
-        &#8377; <%= listing.price.toLocaleString("en-IN") %> <br />
-        <%= listing.location %> <br />
-        <%= listing.country %> <br />
+        Owned By:
+        <i><%= listing.owner.username %></i>
+        </p>
+        <p class="card-text"> 
+        <%= listing.description %> </p>
+        <p class="card-text">&#8377; <%= listing.price.toLocaleString("en-IN") %> </p>
+        <p class="card-text"><%= listing.location %> </p>
+        <p class="card-text"><%= listing.country %>
       </p>
     </div>
   </div>
+<% if(currUser && listing.owner._id.equals(currUser._id)) { %>
   <div class="btns" style="margin-left: 13rem;">
     <a
       href="/listings/<%= listing._id%>/edit"
@@ -25,9 +30,9 @@
       <button class="btn btn-dark offset-4">Delete</button>
     </form>
   </div>
-
-  <div class="card col-6 offset-0 mb-3">
-    <hr>
+<%}%>
+<div class="card col-6 offset-0 mb-3">
+  <% if(currUser){ %>
     <h4>Please Do Leave a Review</h4>
     <form action="/listings/<%=listing.id %>/reviews" method="post" novalidate class="needs-validation">
       <div class="mb-3 mt-3">
@@ -41,7 +46,7 @@
         </div>
         <button class="btn btn-outline-dark">Submit</button>
     </form>
-
+<%}%>
     <hr>
 
     <p><b>All Reviews</b></p>
@@ -49,7 +54,7 @@
     <% for(review of listing.reviews) {%>
       <div class="card-rev-del col-5 ms-3 mb-3">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title"> @ <%= review.author.username %></h5>
           <p class="card-text"><%=review.comment%></p>
           <p class="card-text"><%=review.rating %> Stars</p>
         </div>
