--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,9 +1,104 @@
 <%layout("/layouts/boilerplate")%>
-<h3>ALL LISTINGS</h3>
-<!-- <form method="get" action="/listings/new">
-        <button>Create New Listing</button>
-    </form> -->
-<div class="row row-cols-lg-3-md-2 row-cols-sm-1">
+
+<style>
+  #filters {
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: center;
+  }
+  .filter{
+    text-align: center;
+    margin-right:1rem ;
+    margin-top: 2rem;
+    opacity: 0.7;
+  }
+  .filter:hover{
+    opacity:1;
+    cursor: pointer;
+  }
+  .filter p{
+    font-size:0.8rem
+  }
+  #tax-info{
+    display: none;
+  }
+  .tax-toggle{
+    border:1px solid black;
+    border-radius: 1rem;
+    padding: 1rem;
+    height: 3.5rem;
+    margin: 1rem;
+  }
+</style>
+<div id="filters">
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-fire"></i>
+    </div>
+    <p>Trending</p>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-bed"></i>
+    </div>
+    <p>Rooms</p>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-mountain-city"></i>
+    </div>
+    <p>Iconic Cities</p>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-mountain"></i>
+    </div>
+    <p>Mountains</p>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-brands fa-fort-awesome"></i>
+    </div>
+    <p>Castles</p>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-person-swimming"></i>
+    </div>
+    <p>Amazing Pools</p>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-mountain"></i>
+    </div>
+    <p>Camping</p>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-cow"></i>
+    </div>
+    <p>Farms</p>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-regular fa-snowflake"></i>
+    </div>
+    <p>Arctic</p>
+  </div>
+  <div class="filter">
+    <div>
+      <i class="fa-solid fa-igloo"></i>
+    </div>
+    <p>Domes</p>
+  </div>
+  <div class="tax-toggle switch filter">
+    <div class="form-check-reverse form-switch switch">
+      <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+      <label class="form-check-label" for="flexSwitchCheckDefault">Display  Total after Taxes</label>
+    </div>
+  </div>
+</div>
+<div class="row row-cols-lg-3-md-2 row-cols-sm-1 mt-3">
     <% for(let listing of alllistings){%>
         <a href="/listings/<%= listing.id %>" class="card col " style="width: 23rem; text-decoration: none; color: inherit;">
     <div class="card col card" style="width: 23rem">
@@ -19,9 +114,19 @@
         <p class="card-text">
           <b><%=listing.title%></b><br />
           &#8377; <%= listing.price.toLocaleString("en-IN") %>/night
+          <i class = "tax-info">&nbsp;&nbsp;+18%GST </i>
         </p>
       </div>
     </div>
     </a>
   <%}%>
 </div>
+<script>
+  let taxSwitch = document.getElementById("flexSwitchCheckDefault");
+  taxSwitch.addEventListener("click", () => {
+    let taxInfo = document.getElementsByClassName('tax-info');
+    for(info of taxInfo){
+        info.style.display = taxSwitch.checked? "inline" : "none";
+    }
+  })
+</script>
